// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionTitleSubDescriptionComponent matches snapshot when editor is hidden 1`] = `
<div
  className="usa-width-one-whole position-details-header-body editable-position-field"
>
  <div
    className="editable-position-field-title"
  >
    title
    : 
  </div>
  <div
    className="usa-grid-full"
  >
    <span>
      content
    </span>
    <EditContentButton
      onToggle={[Function]}
    />
  </div>
</div>
`;

exports[`PositionTitleSubDescriptionComponent matches snapshot when editor is shown 1`] = `
<div
  className="usa-width-one-whole position-details-header-body editable-position-field"
>
  <div
    className="editable-position-field-title"
  >
    title
    : 
  </div>
  <TextEditorLoadable
    cancel={[Function]}
    initialText="content"
    onSubmitText={[Function]}
  />
</div>
`;
